Parse configs. WIP

--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -55,30 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset \"us-companies\" on disk (2 days old).\n",
-      "- Loading from disk ... Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
+      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. It was not found and was dropped from the list.\n"
      ]
     },
     {
      "data": {
-      "text/plain": "                       Company Name IndustryId Past Years Requested Peer List\nTicker                                                                       \nAXP             AMERICAN EXPRESS CO   104007.0                   10        []\nDFS     Discover Financial Services   104007.0                   10        []\nMA                   Mastercard Inc   104007.0                   10        []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Company Name</th>\n      <th>IndustryId</th>\n      <th>Past Years Requested</th>\n      <th>Peer List</th>\n    </tr>\n    <tr>\n      <th>Ticker</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>AXP</th>\n      <td>AMERICAN EXPRESS CO</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>DFS</th>\n      <td>Discover Financial Services</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <td>Mastercard Inc</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                       Company Name IndustryId Past Years Requested   \nTicker                                                                \nAXP             AMERICAN EXPRESS CO   104007.0                   10  \\\nDFS     Discover Financial Services   104007.0                   10   \nMA                   Mastercard Inc   104007.0                   10   \nPYPL          PayPal Holdings, Inc.   104007.0                   10   \nCOF           Capital One Financial   104007.0                   10   \nWU                 Western Union Co   104007.0                   10   \nEEFT          EURONET WORLDWIDE INC   100002.0                   10   \nBAC       BANK OF AMERICA CORP /DE/   104002.0                   10   \n\n       Peer Weight Evaluate Peer List  \nTicker                                 \nAXP            100     True        []  \nDFS            100     True        []  \nMA             100     True        []  \nPYPL            80    False      None  \nCOF             60    False      None  \nWU              60    False      None  \nEEFT            60    False      None  \nBAC             60    False      None  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Company Name</th>\n      <th>IndustryId</th>\n      <th>Past Years Requested</th>\n      <th>Peer Weight</th>\n      <th>Evaluate</th>\n      <th>Peer List</th>\n    </tr>\n    <tr>\n      <th>Ticker</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>AXP</th>\n      <td>AMERICAN EXPRESS CO</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>DFS</th>\n      <td>Discover Financial Services</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <td>Mastercard Inc</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>PYPL</th>\n      <td>PayPal Holdings, Inc.</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>80</td>\n      <td>False</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>COF</th>\n      <td>Capital One Financial</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>WU</th>\n      <td>Western Union Co</td>\n      <td>104007.0</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>EEFT</th>\n      <td>EURONET WORLDWIDE INC</td>\n      <td>100002.0</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>BAC</th>\n      <td>BANK OF AMERICA CORP /DE/</td>\n      <td>104002.0</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "c = pn.Companies()"
@@ -104,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "SimFinId                 59265\nCompany Name    MICROSOFT CORP\nIndustryId            101003.0\nName: MSFT, dtype: object"
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
