--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,22 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
-      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install -e ..\n",
     "\n",
@@ -55,42 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'insurance'"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = pn.Fundamentals()\n",
-    "f.get_simfin_schema('PRU')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. It was not found and was dropped from the list.\n"
+      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Compnay uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
+      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n",
+      "There is an error in the supplied ticker symbol INTC in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Financials are not available, company was dropped from the list.\n"
      ]
     },
     {
      "data": {
-      "text/plain": "                       Company Name IndustryId Simfin Schema   \nTicker                                                         \nAXP             AMERICAN EXPRESS CO   104007.0          bank  \\\nDFS     Discover Financial Services   104007.0          bank   \nMA                   Mastercard Inc   104007.0        normal   \nPYPL          PayPal Holdings, Inc.   104007.0        normal   \nCOF           Capital One Financial   104007.0          bank   \nWU                 Western Union Co   104007.0        normal   \nEEFT          EURONET WORLDWIDE INC   100002.0        normal   \nBAC       BANK OF AMERICA CORP /DE/   104002.0          bank   \n\n       Past Years Requested Peer Weight Evaluate   \nTicker                                             \nAXP                      10         100     True  \\\nDFS                      10         100     True   \nMA                       10         100     True   \nPYPL                     10          80    False   \nCOF                      10          60    False   \nWU                       10          60    False   \nEEFT                     10          60    False   \nBAC                      10          60    False   \n\n                                   Peer List First Report Date   \nTicker                                                           \nAXP      [DFS, MA, PYPL, COF, WU, EEFT, BAC]        2009-06-30  \\\nDFS      [AXP, MA, PYPL, COF, WU, EEFT, BAC]        2009-09-30   \nMA      [AXP, DFS, PYPL, COF, WU, EEFT, BAC]        2009-06-30   \nPYPL                                    None        2015-06-30   \nCOF                                     None        2009-06-30   \nWU                                      None        2008-12-31   \nEEFT                                    None        2022-11-30   \nBAC                                     None        2011-09-30   \n\n       Last Report Date  \nTicker                   \nAXP          2022-12-31  \nDFS          2022-12-31  \nMA           2022-12-31  \nPYPL         2022-12-31  \nCOF          2022-12-31  \nWU           2022-12-31  \nEEFT         2023-02-28  \nBAC          2022-12-31  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Company Name</th>\n      <th>IndustryId</th>\n      <th>Simfin Schema</th>\n      <th>Past Years Requested</th>\n      <th>Peer Weight</th>\n      <th>Evaluate</th>\n      <th>Peer List</th>\n      <th>First Report Date</th>\n      <th>Last Report Date</th>\n    </tr>\n    <tr>\n      <th>Ticker</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>AXP</th>\n      <td>AMERICAN EXPRESS CO</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[DFS, MA, PYPL, COF, WU, EEFT, BAC]</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>DFS</th>\n      <td>Discover Financial Services</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[AXP, MA, PYPL, COF, WU, EEFT, BAC]</td>\n      <td>2009-09-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <td>Mastercard Inc</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[AXP, DFS, PYPL, COF, WU, EEFT, BAC]</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>PYPL</th>\n      <td>PayPal Holdings, Inc.</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>80</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2015-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>COF</th>\n      <td>Capital One Financial</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>WU</th>\n      <td>Western Union Co</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2008-12-31</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>EEFT</th>\n      <td>EURONET WORLDWIDE INC</td>\n      <td>100002.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2022-11-30</td>\n      <td>2023-02-28</td>\n    </tr>\n    <tr>\n      <th>BAC</th>\n      <td>BANK OF AMERICA CORP /DE/</td>\n      <td>104002.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2011-09-30</td>\n      <td>2022-12-31</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                       Company Name IndustryId Simfin Schema   \nTicker                                                         \nAXP             AMERICAN EXPRESS CO   104007.0          bank  \\\nDFS     Discover Financial Services   104007.0          bank   \nMA                   Mastercard Inc   104007.0        normal   \nPYPL          PayPal Holdings, Inc.   104007.0        normal   \nCOF           Capital One Financial   104007.0          bank   \nWU                 Western Union Co   104007.0        normal   \nBAC       BANK OF AMERICA CORP /DE/   104002.0          bank   \n\n       Past Years Requested Peer Weight Evaluate   \nTicker                                             \nAXP                      10         100     True  \\\nDFS                      10         100     True   \nMA                       10         100     True   \nPYPL                     10          80    False   \nCOF                      10          60    False   \nWU                       10          60    False   \nBAC                      10          60    False   \n\n                             Peer List First Report Date Last Report Date  \nTicker                                                                     \nAXP      [DFS, MA, PYPL, COF, WU, BAC]        2009-06-30       2022-12-31  \nDFS      [AXP, MA, PYPL, COF, WU, BAC]        2009-09-30       2022-12-31  \nMA      [AXP, DFS, PYPL, COF, WU, BAC]        2009-06-30       2022-12-31  \nPYPL                              None        2015-06-30       2022-12-31  \nCOF                               None        2009-06-30       2022-12-31  \nWU                                None        2008-12-31       2022-12-31  \nBAC                               None        2011-09-30       2022-12-31  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Company Name</th>\n      <th>IndustryId</th>\n      <th>Simfin Schema</th>\n      <th>Past Years Requested</th>\n      <th>Peer Weight</th>\n      <th>Evaluate</th>\n      <th>Peer List</th>\n      <th>First Report Date</th>\n      <th>Last Report Date</th>\n    </tr>\n    <tr>\n      <th>Ticker</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>AXP</th>\n      <td>AMERICAN EXPRESS CO</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[DFS, MA, PYPL, COF, WU, BAC]</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>DFS</th>\n      <td>Discover Financial Services</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[AXP, MA, PYPL, COF, WU, BAC]</td>\n      <td>2009-09-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <td>Mastercard Inc</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>100</td>\n      <td>True</td>\n      <td>[AXP, DFS, PYPL, COF, WU, BAC]</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>PYPL</th>\n      <td>PayPal Holdings, Inc.</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>80</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2015-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>COF</th>\n      <td>Capital One Financial</td>\n      <td>104007.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2009-06-30</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>WU</th>\n      <td>Western Union Co</td>\n      <td>104007.0</td>\n      <td>normal</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2008-12-31</td>\n      <td>2022-12-31</td>\n    </tr>\n    <tr>\n      <th>BAC</th>\n      <td>BANK OF AMERICA CORP /DE/</td>\n      <td>104002.0</td>\n      <td>bank</td>\n      <td>10</td>\n      <td>60</td>\n      <td>False</td>\n      <td>None</td>\n      <td>2011-09-30</td>\n      <td>2022-12-31</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,22 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "c = pn.Companies()"
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "res = c.get_company('AXP')\n",
-    "res"
+    "funds = pn.Fundamentals()\n",
+    "funds.is_standard_reporting_dates('EEFT')"
    ],
    "metadata": {
     "collapsed": false
