trading_ratios.py - calc_quarterly_pe, simfin_global_cache.py - corrected refresh_days param

--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -60,128 +60,8 @@
      "text": [
       "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
       "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
-      "Dataset \"us-companies\" on disk (10 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-quarterly\" on disk (1 days old).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-income-banks-quarterly\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-quarterly\" on disk (1 days old).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-derived-banks-quarterly\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-insurance-quarterly\" on disk (1 days old).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... Done!\n",
       "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
       "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
      ]
     }
    ],
@@ -194,50 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset \"us-shareprices-daily\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-derived-shareprices-daily\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
+      "Adding breaking report for ticker V for report date 2023-03-31 00:00:00\n"
      ]
     }
    ],
@@ -250,18 +93,18 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Date\n2022-10-03     88.08241\n2022-10-04     90.02202\n2022-10-05     91.00152\n2022-10-06     89.99292\n2022-10-07     89.13950\n                ...    \n2022-12-23    111.28930\n2022-12-27    111.53802\n2022-12-28    110.83513\n2022-12-29    112.49503\n2022-12-30    112.33283\nName: Price to Earnings Ratio (quarterly), Length: 63, dtype: float64"
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "Various experiments below"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "dp = pn.DailyPrices()\n",
     "spr = dp.get_downsampled_share_price_ratios('V')\n",
@@ -276,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "fund = pn.Fundamentals()\n",
@@ -288,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "comp = pd.DataFrame(index = pe.index, columns=['Closing Price', 'Quarterly EPS', 'SimFin Quarterly EPS', 'PE TTM', 'SimFin PE TTM', 'Qtr PE', 'SimFin Qtr PE'])\n",
@@ -306,17 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "111.9904819917815"
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "p = dp.get_daily_prices('V')\n",
     "inc1 = fund.get_quarterly_income_statement('V')\n",
@@ -325,100 +159,8 @@
     "# pe = p.loc[:,sf_cols.CLOSE] / re_inc1.loc[:, sf_cols.NET_INCOME] / re_inc1.loc[:, sf_cols.SHARES_DILUTED]\n",
     "pe_x['QTR_EPS'] = re_inc1.loc[:, sf_cols.NET_INCOME] / re_inc1.loc[:, sf_cols.SHARES_DILUTED]\n",
     "pe_x['QTR_PE'] = p[sf_cols.CLOSE] / pe_x['QTR_EPS']\n",
-    "pe_x.loc['2022-10-01':'2022-12-30', 'QTR_PE'].mean()\n",
+    "pe_x.loc['2022-07-01':'2022-09-30', 'QTR_PE'].mean()\n",
     "# p.loc['2022-10-01':'2022-12-30', sf_cols.CLOSE].mean()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "pf = config.parse_forecasts('V')\n",
-    "pf"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "pf.loc['AXP'].index"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "br = config.parse_breaking_reports('V')\n",
-    "br"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "one = br.loc['V']"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "one.index"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "ts = config.parse_target_sheet('V', 10)\n",
-    "ts"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fund = pn.Fundamentals()\n",
-    "inc1 = fund.get_quarterly_income_statement('XOM')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "inc1.index"
    ],
    "metadata": {
     "collapsed": false
