--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,20 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install -e ..\n",
     "\n",
@@ -52,19 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
-      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
-      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
-      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "config = pn.Config('master', 'V', 10)"
    ],
@@ -74,19 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding breaking report for ticker V for report date 2023-03-31 00:00:00\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "tr = pn.TradingRatios(config)\n",
-    "pe = tr.calc_quarterly_pe('V')"
+    "tr = pn.Multiples('V', config)\n",
+    "tr.init_dataframe()\n",
+    "tr.calc_quarterly_pe()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tr = pn.TradingRatios('V', config)\n",
+    "ratios = tr.calc_quarterly_pe()\n",
+    "pd.concat([ratios], keys=['V'], names=[sf_cols.TICKER])"
    ],
    "metadata": {
     "collapsed": false
