--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -54,9 +54,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 56,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding breaking report for ticker V for report date 2023-03-31\n",
+      "Adding breaking report for ticker DFS for report date 2023-03-31\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3460, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/9p/f2tvcxd55k125ycs4hyyx6800000gn/T/ipykernel_55496/2837696869.py\", line 2, in <module>\n",
+      "    comps.run_comps()\n",
+      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 21, in run_comps\n",
+      "    print('Here')\n",
+      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 21, in run_comps\n",
+      "    print('Here')\n",
+      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 1179, in _pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\n",
+      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 620, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
+      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 929, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
+      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 920, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
+      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 317, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.do_wait_suspend\n",
+      "  File \"/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py\", line 1160, in do_wait_suspend\n",
+      "    self._do_wait_suspend(thread, frame, event, arg, suspend_type, from_this_thread)\n",
+      "  File \"/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py\", line 1175, in _do_wait_suspend\n",
+      "    time.sleep(0.01)\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 2057, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "comps = pn.Comps(config)\n",
+    "comps.run_comps()"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -79,9 +148,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "tr = pn.TradingRatios('V', config)\n",
+    "tr = pn.Multiples('V', config)\n",
+    "tr.init_dataframe()\n",
     "ratios = tr.calc_quarterly_pe()\n",
-    "pd.concat([ratios], keys=['V'], names=[sf_cols.TICKER])"
+    "temp = pd.concat([ratios], keys=['V'], names=[sf_cols.TICKER])\n",
+    "temp1 = temp.join(ratios)"
    ],
    "metadata": {
     "collapsed": false
