--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,11 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install -e ..\n",
     "\n",
@@ -43,8 +52,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
+      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
+      "Dataset \"us-companies\" on disk (7 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n",
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n",
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n",
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (0 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
+      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n",
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    }
+   ],
    "source": [
     "config = pn.Config('master', 'V', 10)"
    ],
@@ -54,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "outputs": [
     {
      "name": "stdout",
@@ -72,11 +152,11 @@
       "Traceback (most recent call last):\n",
       "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3460, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/9p/f2tvcxd55k125ycs4hyyx6800000gn/T/ipykernel_55496/2837696869.py\", line 2, in <module>\n",
-      "    comps.run_comps()\n",
-      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 21, in run_comps\n",
+      "  File \"/var/folders/9p/f2tvcxd55k125ycs4hyyx6800000gn/T/ipykernel_70938/2166537084.py\", line 3, in <module>\n",
+      "    comps.run_variations()\n",
+      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 45, in run_variations\n",
       "    print('Here')\n",
-      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 21, in run_comps\n",
+      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 45, in run_variations\n",
       "    print('Here')\n",
       "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 1179, in _pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\n",
       "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 620, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
@@ -124,7 +204,8 @@
    ],
    "source": [
     "comps = pn.Comps(config)\n",
-    "comps.run_comps()"
+    "comps.run_ratios()\n",
+    "comps.run_variations()"
    ],
    "metadata": {
     "collapsed": false
