Re work multiples.py,  calc_quarterly_pe to use single multi index DF.

--- a/notebooks/scratchpad.ipynb
+++ b/notebooks/scratchpad.ipynb
@@ -2,12 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pandas import IndexSlice as idx"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     1st  2nd  3rd\nA a  NaN  NaN  NaN\n  b  NaN  NaN  NaN\n  c  NaN  NaN  NaN\n  d  NaN  NaN  NaN\nB a  NaN  NaN  NaN\n  b  NaN  NaN  NaN\n  c  NaN  NaN  NaN\n  d  NaN  NaN  NaN",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>1st</th>\n      <th>2nd</th>\n      <th>3rd</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">A</th>\n      <th>a</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>c</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>d</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">B</th>\n      <th>a</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>b</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>c</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>d</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ix = pd.MultiIndex.from_product([['A', 'B'], ['a', 'b', 'c', 'd']])\n",
+    "df = pd.DataFrame(index=ix, columns=['1st', '2nd', '3rd'], dtype=np.float64)\n",
+    "df_ = pd.DataFrame(index=['a', 'b', 'c', 'd'], columns=['1st', '2nd', '3rd'], data=np.random.rand(4, 3))\n",
+    "df_"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "df.loc['A', :] = df_"
    ],
    "metadata": {
     "collapsed": false
@@ -16,45 +53,84 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "     name  age     sex\n0  Olivia   32  female\n1    Dean   23    male\n2    Alex   45    male\n3     Jon   35    male\n4     Tom   20    male\n5    Jane   28  female\n6    Kate   55  female",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>age</th>\n      <th>sex</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Olivia</td>\n      <td>32</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Dean</td>\n      <td>23</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Alex</td>\n      <td>45</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Jon</td>\n      <td>35</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Tom</td>\n      <td>20</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Jane</td>\n      <td>28</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Kate</td>\n      <td>55</td>\n      <td>female</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame({'name': ['Olivia','Dean','Alex','Jon','Tom','Jane','Kate'], \\\n",
-    "                   'age': [32,23,45,35,20,28,55], \\\n",
-    "                   'sex':['female', 'male','male','male','male','female','female']})\n",
-    "\n",
-    "df"
-   ]
+    "df = pd.read_csv('dataset.csv', index_col=[0,1], header=[0,1])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "df = df.sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "     name  age     sex\n0  Olivia   32  female\n1    Dean   23    male\n2    Alex   46    male\n3     Jon   35    male\n4     Tom   20    male\n5    Jane   28  female\n6    Kate   55  female",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>age</th>\n      <th>sex</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Olivia</td>\n      <td>32</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Dean</td>\n      <td>23</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Alex</td>\n      <td>46</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Jon</td>\n      <td>35</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Tom</td>\n      <td>20</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Jane</td>\n      <td>28</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Kate</td>\n      <td>55</td>\n      <td>female</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "FrozenList([['Day', 'Night'], ['Max Temperature', 'Weather', 'Wind']])"
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.at[2, 'age'] = 46\n",
-    "df"
+    "df.columns.levels"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                      Weather       Wind  Max Temperature\nDate                                                     \n2019-07-01             Shower  SW 16 mph               28\n2019-07-02             Shower  SW 16 mph               29\n2019-07-03  Scattered showers  SW 16 mph               29\n2019-07-04      Mostly cloudy  SW 16 mph               31",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Weather</th>\n      <th>Wind</th>\n      <th>Max Temperature</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-07-01</th>\n      <td>Shower</td>\n      <td>SW 16 mph</td>\n      <td>28</td>\n    </tr>\n    <tr>\n      <th>2019-07-02</th>\n      <td>Shower</td>\n      <td>SW 16 mph</td>\n      <td>29</td>\n    </tr>\n    <tr>\n      <th>2019-07-03</th>\n      <td>Scattered showers</td>\n      <td>SW 16 mph</td>\n      <td>29</td>\n    </tr>\n    <tr>\n      <th>2019-07-04</th>\n      <td>Mostly cloudy</td>\n      <td>SW 16 mph</td>\n      <td>31</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[('London',), ('Day',)]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MultiIndex' object has no attribute 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[23], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcolumns\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'MultiIndex' object has no attribute 'index'"
+     ]
+    }
+   ],
+   "source": [
+    "df.columns.index"
    ],
    "metadata": {
     "collapsed": false
