--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,17 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
       "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
-      "Dataset \"us-companies\" on disk (8 days old).\n",
+      "Dataset \"us-companies\" on disk (1 days old).\n",
       "- Loading from disk ... Done!\n",
       "Dataset \"us-income-quarterly\" on disk (1 days old).\n"
      ]
@@ -61,7 +59,8 @@
       "Dataset \"us-income-banks-quarterly\" on disk (1 days old).\n",
       "- Downloading ... 100.0%\n",
       "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n"
      ]
     },
     {
@@ -76,8 +75,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!\n",
-      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n",
       "- Downloading ... 100.0%\n",
       "- Extracting zip-file ... Done!\n",
       "- Loading from disk ... Done!\n",
@@ -180,75 +177,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset \"us-shareprices-daily\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-derived-shareprices-daily\" on disk (1 days old).\n",
-      "- Downloading ... 100.0%\n",
-      "- Extracting zip-file ... Done!\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
       "Adding breaking report for ticker V for report date 2023-03-31\n",
-      "Adding breaking report for ticker DFS for report date 2023-03-31\n"
+      "Adding breaking report for ticker DFS for report date 2023-03-31\n",
+      "Here\n",
+      "Adding breaking report for ticker V for report date 2023-03-31\n",
+      "Adding breaking report for ticker DFS for report date 2023-03-31\n",
+      "Here\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/Dev/pinon/pinon/multiples.py:77: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
+      "  self.multiples.loc[(ticker, ), pe_cols] = pe.values\n"
      ]
     }
    ],
    "source": [
     "m = pn.Multiples(config)\n",
-    "m.init_multiples_df()"
+    "m.run_multiples()"
    ],
    "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "m = pn.Multiples(config)\n",
-    "m.run_multiples()\n",
-    "m = config.breaking_reports[pn_cols.BREAKING_EMPLOYED]\n",
-    "br = config.breaking_reports[m]"
-   ],
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
